implemented new pp rework