@@ -96,9 +96,9 @@
             <version>5.8.25</version>
         </dependency>
         <dependency>
-            <groupId>org.rosu</groupId>
-            <artifactId>rosu-java</artifactId>
-            <version>0.2.1</version>
+            <groupId>me.aloic</groupId>
+            <artifactId>rosu-pp-java</artifactId>
+            <version>0.0.1</version>
         </dependency>
         <dependency>
             <groupId>me.aloic</groupId>
@@ -180,6 +180,25 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <jvmArguments>--enable-preview --enable-native-access=ALL-UNNAMED</jvmArguments>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <enablePreview>true</enablePreview>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--enable-preview --enable-native-access=ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
 
             <plugin>
